[package]
name = "casesmith"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
tree-sitter = "0.25.8"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
